make error-prone happy; press reformat